호버시 암막

--- a/클론코딩3/scss/layout.scss
+++ b/클론코딩3/scss/layout.scss
@@ -10,13 +10,16 @@ span { line-height: 1.6; }
 
 body.on {
   content: '';
-  z-index: 0;
+  z-index: 9999;
   position: absolute;
   top: 0;
   left : 0;
   width: 100%;
   height: 100%;
   background-color: rgba(0,0,0, 0.7);
+  .main-intro-box {
+    opacity: .5;
+  }
 }
 
 .top-head {
