--- a/클론코딩3/css/swiper_customize.css
+++ b/클론코딩3/css/swiper_customize.css
@@ -1,16 +1,19 @@
 /* swiper button custom area */
 .swiper-button-next:after, .swiper-button-prev:after {
-  display: none;
+  color: rgba(0, 0, 0, 0.3);
+  left: 7px;
+  position: absolute;
 }
 
-.swiper-button-prev {
-  height: 20px;
-  width: 20px;
+.swiper-button-next:after {
+  margin-left: 7px;
+}
+
+.swiper-button-wrap1 {
+  position: absolute;
   background: red;
-}
-
-.swiper-button-next {
-  height: 20px;
-  width: 20px;
-  background: blue;
+  height: 70px;
+  width: 70px;
+  top: 0;
+  right: 0;
 }
