--- a/클론코딩3/scss/swiper_customize.scss
+++ b/클론코딩3/scss/swiper_customize.scss
@@ -11,3 +11,12 @@
 .swiper-button-next:after{
   margin-left: 7px;
 }
+
+.swiper-button-wrap1 {
+  position: absolute;
+  background: red;
+  height: 70px;
+  width: 70px;
+  top: 0;
+  right: 0;
+}
